--- a/ITANFTORAIHUH/index.html
+++ b/ITANFTORAIHUH/index.html
@@ -28,7 +28,7 @@
     </nav>
 
     <main>
-      <img src="images/ai/ai(1).png" id="img" />
+      <img src="" id="img" />
 
       <!-- <div class="contents" id="content"></div> -->
       <div class="container">
